fix: 🐛 crepe slash menu and toolbar z-index (#1864)
* fix: 🐛 crepe slash menu and toolbar z-index

* [autofix.ci] apply automated fixes

* chore: update release log

---------

--- a/packages/crepe/src/theme/common/toolbar.css
+++ b/packages/crepe/src/theme/common/toolbar.css
@@ -3,6 +3,7 @@
     &[data-show='false'] {
       display: none;
     }
+    z-index: 10;
     position: absolute;
     display: flex;
     background: var(--crepe-color-surface);
